--- a/GlucoMan.Maui/MiscellaneousFunctionsPage.xaml
+++ b/GlucoMan.Maui/MiscellaneousFunctionsPage.xaml
@@ -5,7 +5,7 @@
              Title="Miscellaneous functions">
     <ContentPage.Content>
         <Grid Padding="8,0,8,0"
-              RowDefinitions="30, 20, 50, 60, 60, 60, 60, 60, 60"
+              RowDefinitions="30, 20, 50, 60, 60, 60, 60, 60, 60, 60"
               ColumnDefinitions="*,*" Margin="2">
             <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Text="Blood glucose unit conversion"
                    FontSize="Title" FontAttributes="Bold" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
@@ -41,6 +41,9 @@
             <Button Grid.Row="8" Grid.Column="1"
                     Text="Delete error log" WidthRequest="150"
                     x:Name="btnDeleteErrorLog" Clicked="btnDeleteErrorLog_ClickAsync" />
+            <Button Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="2" 
+                    Text="Menù" WidthRequest="150"
+                    x:Name="btnMenu" Clicked="btnMenu_Click" />
         </Grid>
     </ContentPage.Content>
 </ContentPage>
