--- a/GlucoMan.Maui/CorrectionParametersPage.xaml
+++ b/GlucoMan.Maui/CorrectionParametersPage.xaml
@@ -2,19 +2,19 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GlucoMan.Maui.CorrectionParametersPage"
-             Title="Parameters for the corrections">
+             Title="Parameters for corrections">
     <ContentPage.Content>
-        <Grid>
+        <Grid RowDefinitions="35,20,28,45,20,60,20,35,25,20,60,20,60,45,30,60"
+                ColumnDefinitions="*,*,*,*">
             <!--<Grid RowDefinitions="35,20,20,35,20,60,20,30,25,20,60,20,60,35,20,60"
                 ColumnDefinitions="*,*,*,*"/>-->
-            <Grid RowDefinitions="35,20,28,25,20,60,20,35,25,20,60,20,60,35,30,60"
-                ColumnDefinitions="*,*,*,*"/>
-            <Label Grid.Row="0" Grid.ColumnSpan="4" Text="Calculation of Ratio CHO/insulin" 
-                   HorizontalTextAlignment="Center" VerticalTextAlignment="End" FontSize="Large" FontAttributes="Bold"/>
-            <Label Grid.Row="1" Grid.ColumnSpan="4" Text="(better if calculated from dietist)" 
+            <Label Grid.Row="0" Grid.ColumnSpan="4" Text="Calculations of Ratio CHO/insulin" 
+                   HorizontalTextAlignment="Center" VerticalTextAlignment="End" FontSize="Medium" FontAttributes="Bold"/>
+            <Label Grid.Row="1" Grid.ColumnSpan="4" Text="(calculate it with dietist)" 
                    HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="2" Grid.ColumnSpan="4" Text="Calculation to be implemented yet" 
-                    FontSize="Medium" HorizontalTextAlignment="Center" VerticalTextAlignment="End" BackgroundColor="Red" TextColor="Yellow"/>
+            <Label Grid.Row="2" Grid.ColumnSpan="4" Text="Calculations to be implemented yet" 
+                   FontSize="Medium" HorizontalTextAlignment="Center" VerticalTextAlignment="End" 
+                   BackgroundColor="Red" TextColor="Yellow"/>
 
             <Label Grid.Row="3" Grid.ColumnSpan="4" Text="Ratio CHO/insulin" 
                     FontSize="Medium" HorizontalTextAlignment="Center" VerticalTextAlignment="End" />
@@ -31,17 +31,17 @@
                     Clicked="btnSaveRatioCHOInsulin_Click" />
 
             <Label Grid.Row="6" Grid.ColumnSpan="4" Text="" 
-                   HorizontalTextAlignment="Center" VerticalTextAlignment="End" FontSize="Large"/>
+                   HorizontalTextAlignment="Center" VerticalTextAlignment="End" FontSize="Medium"/>
 
             <Label Grid.Row="7" Grid.ColumnSpan="4" Text="Calculation of insulin sensitivity" 
-                   FontSize="Large"  HorizontalTextAlignment="Center" VerticalTextAlignment="End" FontAttributes="Bold"/>
+                   FontSize="Medium"  HorizontalTextAlignment="Center" VerticalTextAlignment="End" FontAttributes="Bold"/>
             <Label Grid.Row="8" Grid.ColumnSpan="4" Text="Typical boluses made during a day [U]" 
-                   FontSize="Medium" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+                   FontSize="Small" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
             <Label Grid.Row="9" Grid.Column="0" Text="morning" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <Label Grid.Row="9" Grid.Column="1" Text="midday" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <Label Grid.Row="9" Grid.Column="2" Text="evening" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="9" Grid.Column="3" Text="night" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="9" Grid.Column="3" Text="long" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
             <Entry Grid.Row="10" Grid.Column="0" x:Name="txtTypicalBolusMorning" Text="" 
                    Keyboard="Numeric" Placeholder="bolus [Ui]" HorizontalTextAlignment ="End" BackgroundColor="PaleGreen" />
@@ -57,15 +57,8 @@
             <Label Grid.Row="11" Grid.Column="2" Text="Sens.to insul." HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
 
             <Label Grid.Row="12" Grid.Column="0" x:Name="txtTotalDailyDoseOfInsulin" Text="----" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
-            <Picker Grid.Row="12" Grid.Column="1" x:Name="cmbSensitivityFactor" Title="pick value">
-                <Picker.ItemsSource>
-                    <x:Array Type="{x:Type x:String}">
-                        <x:String>1800</x:String>
-                        <x:String>1500</x:String>
-                        <x:String>1400</x:String>
-                    </x:Array>
-                </Picker.ItemsSource>
-            </Picker>
+            <Picker Grid.Row="12" Grid.Column="1" x:Name="cmbSensitivityFactor" Title="pick value" />
+
             <Entry Grid.Row="12" Grid.Column="2" x:Name="txtInsulinCorrectionSensitivity" HorizontalTextAlignment ="End" Text="" 
                    Keyboard="Numeric" Placeholder="mg/dl" BackgroundColor="PaleGoldenrod"/>
             <Grid Grid.Row="12" Grid.Column="3">
@@ -83,9 +76,10 @@
             </Grid>
 
             <Label Grid.Row="13" Grid.ColumnSpan="4" Text="Physical Activity parameters" 
-                   HorizontalTextAlignment="Center" VerticalTextAlignment="End" FontSize="Large" FontAttributes="Bold"/>
-            <Label Grid.Row="14" Grid.ColumnSpan="4" Text="Calculation to be implemented yet" 
-                    FontSize="Medium" HorizontalTextAlignment="Center" VerticalTextAlignment="End" BackgroundColor="Red" TextColor="Yellow"/>
+                   HorizontalTextAlignment="Center" VerticalTextAlignment="End" FontSize="Medium" FontAttributes="Bold"/>
+            <Label Grid.Row="14" Grid.ColumnSpan="4" Text="Calculations to be implemented yet" 
+                    FontSize="Medium" HorizontalTextAlignment="Center" VerticalTextAlignment="End" 
+                   BackgroundColor="Red" TextColor="Yellow"/>
             <Button Grid.Row="15" Grid.Column="3" x:Name="btnPhysicalActivityCalculation" Text="Save"
                     Clicked="btnPhysicalActivityCalculation_Click" IsEnabled="False"/>
         </Grid>
