--- a/GlucoMan.Maui/FoodToHitTargetCarbsPage.xaml
+++ b/GlucoMan.Maui/FoodToHitTargetCarbsPage.xaml
@@ -2,48 +2,47 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GlucoMan.Maui.FoodToHitTargetCarbsPage"
-             Title="Calculation of food to reach CHO">
+             Title="Food to reach CHO">
     <ContentPage.Content>
-        <Grid RowDefinitions="70,10,40,55,55,70,75,70,40,70"
+        <Grid RowDefinitions="70,0,50,60,55,70,75,70,50,70"
               ColumnDefinitions="*,*,*">
-            <Button Grid.Row="0" Grid.Column="1" x:Name="btnCalculateGrams" Text="Calc Food" 
-                   IsEnabled="True" Margin="10,4,10,4" Clicked="btnCalculateGrams_Click" />
+            <Button Grid.Row="0" Grid.Column="1" x:Name="btnCalculateGrams" Text="Food #10; Calc." 
+                   IsEnabled="True"  Clicked="btnCalculateGrams_Click" />
            
             <Label Grid.Row="2" Grid.Column="0" Text="Target CHO [g]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <Entry Grid.Row="3" Grid.Column="0" x:Name="TxtTargetCho" Text="" Unfocused="TxtTargetCho_Leave"
-                   Keyboard="Numeric" Margin="25,0,25,0" Placeholder="[g]" HorizontalTextAlignment ="End" 
+                   Keyboard="Numeric" Placeholder="[g]" HorizontalTextAlignment ="End" 
                    FontSize="Large" BackgroundColor="PaleGreen"/>
 
             <Label Grid.Row="2" Grid.Column="1" Text="CHO already taken [g]" 
                    HorizontalTextAlignment="Center" VerticalTextAlignment="End" />            
             <Entry Grid.Row="3" Grid.Column="1" x:Name="TxtChoAlreadyTaken" Text="" Unfocused="TxtChoAlreadyTaken_Leave"
-                   Keyboard="Numeric" Margin="25,0,25,0" Placeholder="[g]" HorizontalTextAlignment ="End" 
+                   Keyboard="Numeric" Placeholder="[g]" HorizontalTextAlignment ="End" 
                    FontSize="Large" BackgroundColor="PaleGreen" />
 
             <Label Grid.Row="2" Grid.Column="2" Text="CHO food to eat [%]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <Entry Grid.Row="3" Grid.Column="2" x:Name="TxtChoOfFood" Text="" Unfocused="TxtChoOfFood_Leave"
-                   Keyboard="Numeric" Margin="25,0,25,0" Placeholder="%" HorizontalTextAlignment ="End" 
+                   Keyboard="Numeric"  Placeholder="%" HorizontalTextAlignment ="End" 
                    FontSize="Large" BackgroundColor="PaleGreen" />
 
-            <Label Grid.Row="4" Grid.Column="0" Text="Food to eat" Grid.ColumnSpan="5" Margin="0,0,30,0"
-                   VerticalOptions="End" HorizontalOptions="End"/>
+            <Label Grid.Row="4" Grid.Column="0" Text="Food to eat to complete CHO budget" Grid.ColumnSpan="5"
+                   VerticalOptions="End" HorizontalTextAlignment="Center" HorizontalOptions="End"/>
             <Label Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="5" x:Name="TxtFoodName" Text=""
-                   HorizontalTextAlignment ="End" 
-                   FontSize="Large" BackgroundColor="White" />
+                   HorizontalTextAlignment ="Center" BackgroundColor="White" />
 
             <Button Grid.Row="6" Grid.Column="0" x:Name="btnReadTarget" Text="Read target&#10;CHO" 
-                   Margin="10,5,10,5" Clicked="btnReadTargetCho_Click" />
+                   Clicked="btnReadTargetCho_Click" />
             <Button Grid.Row="6" Grid.Column="1" x:Name="btnReadChoTaken" Text="Read taken&#10;CHO" 
-                   IsEnabled="True" Margin="10,5,10,5" Clicked="btnReadChoTaken_Click" />
+                   IsEnabled="True" Clicked="btnReadChoTaken_Click" />
             <Button Grid.Row="6" Grid.Column="2" x:Name="btnReadFood" Text="Read Food&#10;CHO" 
-                   IsEnabled="True" Margin="10,5,10,5" Clicked="btnReadFood_Click" />
+                   IsEnabled="True" Clicked="btnReadFood_Click" />
             
             <Button Grid.Row="7" Grid.Column="1" x:Name="btnReadAll" Text="Read All" 
-                   Margin="10,0,10,0" Clicked="btnReadAll_Click" />
+                   Clicked="btnReadAll_Click" />
 
             <Label Grid.Row="8" Grid.Column="0" Text="CHO left to take [g]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <Entry Grid.Row="9" Grid.Column="0" x:Name="TxtChoLeftToTake" Text="" Unfocused="TxtChoOfFood_Leave"
-                   Keyboard="Numeric" Margin="25,0,25,0" Placeholder="[g]" HorizontalTextAlignment ="End" 
+                   Keyboard="Numeric" Placeholder="[g]" HorizontalTextAlignment ="End" 
                    FontSize="Large" BackgroundColor="White" />
 
             <Button Grid.Row="9" Grid.Column="1"  Text="Injection" IsEnabled="True" 
@@ -51,7 +50,7 @@
 
             <Label Grid.Row="8" Grid.Column="2" Text="Food to eat to hit target CHO [g]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <Entry Grid.Row="9" Grid.Column="2" x:Name="TxtFoodToHitTarget" Text="" 
-                   Keyboard="Numeric" Margin="25,0,25,0" Placeholder="[g]" HorizontalTextAlignment ="End" 
+                   Keyboard="Numeric" Placeholder="[g]" HorizontalTextAlignment ="End" 
                    FontSize="Large" BackgroundColor="SkyBlue" />
         </Grid>
     </ContentPage.Content>
