--- a/GlucoMan.Maui/HypoPredictionPage.xaml
+++ b/GlucoMan.Maui/HypoPredictionPage.xaml
@@ -4,31 +4,8 @@
              x:Class="GlucoMan.Maui.HypoPredictionPage"
              Title="Hypoglicemia time prediction">
     <ContentPage.Content>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="50"/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
-            </Grid.ColumnDefinitions>
+        <Grid RowDefinitions="50,50,20,20,70,70,50,20,50,20,50,50,20,50,40" 
+              ColumnDefinitions="80*,80*,80*,80*">
 
             <Button Grid.Row="0" Grid.Column="0" Text="Now"
                     Clicked="btnNow_Click"></Button>
@@ -62,7 +39,8 @@
             <Entry Grid.Row="4" Grid.Column="1" x:Name="txtHourLast" Placeholder="hour" 
                    Keyboard="Numeric" FontSize="Large" HorizontalTextAlignment ="End" BackgroundColor="LightGreen" />
             <Entry Grid.Row="4" Grid.Column="2" x:Name="txtMinuteLast" Placeholder="minute" 
-                   Keyboard="Numeric" FontSize="Large" HorizontalTextAlignment ="End" BackgroundColor="LightGreen" />
+                   Keyboard="Numeric" FontSize="Large" 
+                   HorizontalTextAlignment ="End" BackgroundColor="LightGreen" />
             <Label Grid.Row="4" Grid.Column="3" Text="current measurement" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" />
 
             <Entry Grid.Row="5" Grid.Column="0" x:Name="txtGlucosePrevious" Text="" Placeholder="gluc.meas." 
@@ -79,7 +57,8 @@
             <Label Grid.Row="6" Grid.Column="2" Text="Slope&#10;[gluc/h]" 
                    HorizontalTextAlignment="Center" VerticalTextAlignment="Center" />
 
-            <Label Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="4" Text="Expected time of achievement of the target value"
+            <Label Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="4" 
+                   Text="Expected time of target CHO achievement"
                    VerticalOptions="End" HorizontalOptions="Center" />
 
             <Label Grid.Row="8" Grid.Column="1" x:Name="txtPredictedHour" Text="----" FontSize="Large"
@@ -98,7 +77,7 @@
                    Clicked="btnAlarm_Click" Text="Alarm"></Button>
 
             <Label Grid.Row="11" Grid.Column="0" Grid.ColumnSpan="3" 
-                   Text="Calculation of a future glucose value" 
+                   Text="Calculation of a future glucose value, starting from now" 
                    HorizontalTextAlignment="End" VerticalTextAlignment="Center" />
             <Button Grid.Row="11" Grid.Column="3" x:Name="btnCalcFutureGlucose" 
                     Clicked="btnCalcFutureGlucose_Click" Text="Calc."></Button>
@@ -108,18 +87,21 @@
             <Label Grid.Row="12" Grid.Column="3" Text="Future gluc" HorizontalTextAlignment="Center" />
 
             <Entry Grid.Row="13" Grid.Column="0" x:Name="txtFutureTimeMinutes" Placeholder="min" 
-                   Keyboard="Numeric" FontSize="Large" HorizontalTextAlignment ="End" BackgroundColor="DarkSeaGreen" />
-            <DatePicker Grid.Row="13" Grid.Column="1" x:Name="dtpTimeFutureDate" BackgroundColor="White" TextColor="Black"
-                        IsEnabled="False" FontSize="Medium" Format="yyyy-MM-dd" HorizontalOptions="Center"/>
-            <TimePicker Grid.Row="13" Grid.Column="2" x:Name="dtpTimeFutureTime" BackgroundColor="White" TextColor="Black"
-                        IsEnabled="False" FontSize="Medium"  Format="HH:mm:ss" HorizontalOptions="Center" />
+                   Keyboard="Numeric" HorizontalTextAlignment ="End" BackgroundColor="DarkSeaGreen" />
+            <HorizontalStackLayout Grid.Row="13" Grid.Column="1" Grid.ColumnSpan="2">
+                <DatePicker  x:Name="dtpTimeFutureDate" BackgroundColor="White" TextColor="Black"
+                        IsEnabled="False" HorizontalOptions="Center"/>
+                <TimePicker x:Name="dtpTimeFutureTime" BackgroundColor="White" TextColor="Black"
+                        IsEnabled="False" HorizontalOptions="Center" />
+            </HorizontalStackLayout>
+
             <Entry Grid.Row="13" Grid.Column="3" x:Name="txtFutureGlucose" Placeholder="gluc" 
-                   Keyboard="Numeric" FontSize="Large" HorizontalTextAlignment ="End" BackgroundColor="SkyBlue" />
+                   Keyboard="Numeric" HorizontalTextAlignment ="End" BackgroundColor="SkyBlue" />
 
             <Label Grid.Row="14" Grid.Column="0" Grid.ColumnSpan="4"
-                    x:Name="txtStatusBar" Text="" FontSize="Medium" 
+                    x:Name="txtStatusBar" Text="" 
                    BackgroundColor="red" TextColor="Yellow" 
-                    VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
+                   VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
