--- a/GlucoMan.Maui/InjectionsPage.xaml
+++ b/GlucoMan.Maui/InjectionsPage.xaml
@@ -4,15 +4,15 @@
              x:Class="GlucoMan.Maui.InjectionsPage"
              Title="Insulin injections">
     <ContentPage.Content>
-        <Grid RowDefinitions="40,40,55,30,50,25,50,30,*"
+        <Grid RowDefinitions="50,50,55,30,50,25,50,30,*"
               ColumnDefinitions="*,*,*,*">
             <Button Grid.Row="0" Grid.Column="0" Text="Front" x:Name="btnFront" Clicked="btnFront_ClickedAsync"></Button>
             <Button Grid.Row="0" Grid.Column="1" Text="Back" x:Name="btnBack" Clicked="btnBack_Clicked_Async"></Button>
             <Button Grid.Row="0" Grid.Column="2" Text="Hands" x:Name="btnHands" Clicked="btnHands_ClickedAsync"></Button>
-            <Button Grid.Row="0" Grid.Column="3" Text="Sensors" x:Name="btnSensors" Clicked="btnSensors_Clicked_Async"></Button>
+            <Button Grid.Row="0" Grid.Column="3" Text="Sensrs" x:Name="btnSensors" Clicked="btnSensors_Clicked_Async"></Button>
 
-            <Label Grid.Row="1" Grid.Column="0" Text="Actual insulin [U]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
-            <Label Grid.Row="1" Grid.Column="1" Text="Calculated Insulin [U]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="1" Grid.Column="0" Text="Actual Insulin [U]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
+            <Label Grid.Row="1" Grid.Column="1" Text="Calc. ins[U]" HorizontalTextAlignment="Center" VerticalTextAlignment="End"/>
             <Label Grid.Row="1" Grid.Column="2" Text="Id" HorizontalTextAlignment="Center" VerticalTextAlignment="Center"/>
 
             <Entry Grid.Row="2" Grid.Column="0" x:Name="txtInsulinActual" 
@@ -25,19 +25,18 @@
                        FontSize="Medium" HorizontalTextAlignment="Center" IsReadOnly="true"/>
             <Button Grid.Row="2" Grid.Column="3" Text="Save" x:Name="btnSave" Clicked="btnSave_Click"></Button>
 
-            <RadioButton Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="1" Content="Fast insulin" HorizontalOptions="Center"
+            <Label Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Text="Injection time"  
+                   HorizontalTextAlignment="Start" VerticalTextAlignment="Center"/>
+            <RadioButton Grid.Row="3" Grid.Column="2" Grid.ColumnSpan="1" Content="Fast ins." HorizontalOptions="Center"
                          GroupName="groupInsulin" x:Name="rdbFastInsulin" WidthRequest="180" />
-            <RadioButton Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="1" Content="Slow insulin" HorizontalOptions="Center"
+            <RadioButton Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="1" Content="Slow ins." HorizontalOptions="Center"
                          GroupName="groupInsulin" x:Name="rdbSlowInsulin" WidthRequest="180"/>
 
-            <Label Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Text="Injection date and time"  
-                   HorizontalTextAlignment="Start" VerticalTextAlignment="Center"/>
-
             <DatePicker Grid.Row="4" Grid.Column="0" x:Name="dtpInjectionDate" 
-                        BackgroundColor="PaleGreen" FontSize="Small" Format="yyyy-MM-dd" 
+                        BackgroundColor="PaleGreen" 
                         HorizontalOptions="Center" />
             <TimePicker Grid.Row="4" Grid.Column="1" x:Name="dtpInjectionTime" 
-                        BackgroundColor="PaleGreen" FontSize="Small" Format="HH:mm:ss" 
+                        BackgroundColor="PaleGreen" Format="HH:mm:ss" 
                         HorizontalOptions="Center" />
             <Button Grid.Row="4" Grid.Column="2" Text="Now" x:Name="btnNow" Clicked="btnNow_Click"></Button>
             <Grid Grid.Row="4" Grid.Column="3">
